--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# User define files
+test.*
+config.json
+live_status.ini
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
